# ToDoList

./: .dockerignore  Dockerfile  Dockerfile.prod  README.md  docker-compose.yaml  manage.py  pyproject.toml
.github/workflows/: action.yaml  deploy_on_main.yaml  push_any_except_main.yaml
ToDoList/: settings.py
bot/: serializers.py
bot/tg/: client.py  dc.py
core/: models.py  serializers.py  urls.py  views.py
deploy/: docker-compose-ci.yaml  docker-compose.yaml
goals/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py
goals/migrations/: 0004_board_goalcategory_board_boardparticiant.py  0007_alter_goalcategory_board.py
goals/views/: category.py  comment.py  goal.py
tests/: conftest.py  factories.py
tests/core/: test_login.py  test_profile.py  test_signup.py  test_update_password.py
tests/goals/: utils.py
tests/goals/board/: test_board_create.py  test_board_list.py
tests/goals/category/: test_category_create.py  test_category_list.py
tests/goals/comment/: test_comment_create.py  test_comments_list.py
tests/goals/goal/: test_goal_create.py  test_goals_list.py
todolist/: settings.py  urls.py
