[tool.poetry]
name = "todolist"
version = "0.1.0"
description = "Package for ToDoList project"
authors = ["Edenerus <markeev.25@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
psycopg2 = "^2.9.5"
django-environ = "^0.10.0"
docker = "^6.0.1"
pillow = "^9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
